# FastApi-UserMicroservice

./: .gitignore  Dockerfile  README.md  makefile  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
alembic/: env.py
alembic/versions/: 01ad1abd3813_migration.py  30d834e6b3af_descrição.py  3b7adacbd696_migration.py  3e8a6d5a49c8_add_users_table.py  435bc6051d92_migration.py  4e5e10cffa0e_migration.py  5a5a4d048b57_add_users_table.py  5b744fc0baaa_add_users_table.py  5cf57b0ba59b_add_users_table.py  5f1bf8cf38fd_migration.py  668acbcabfa7_migration.py  7090cf73f402_add_users_table.py  8611a400bafb_migration.py  a22bd2e15cda_migration.py  a4baf9fbedc3_migration.py  acf1febba9d3_add_users_table.py  b210a9ca4f98_migration.py  b2fb80b5a30a_add_auto_increment_in_uuid_user_field.py  d60e3c0341ff_migration.py  f0f1e66319c2_migration.py
app/: main.py
app/auth/: endpoints.py  repository.py  schemas.py
app/config/: base_config.py  dev.py  settings.py  test.py
app/database/: connection.py
app/models/: user.py
app/system/database/: connection.py
app/user/: endpoints.py  models.py  repository.py  schema.py  utils.py
app/user/utils/: calculate_expires_date.py  decode_user_token.py  validators.py
contrib/: .env-example  requirements.txt
tests/: conftest.py  test_environment.py
tests/auth/: test_endpoints.py  test_repository.py  test_schema.py
tests/user/: test_endpoints.py  test_repository.py  test_user_schema.py
