[project]
name = "api-startkit"
version = "0.1.0"
description = "A FastAPI template for building scalable and high-performance APIs."
authors = [
    {name = "KauanldsBarbosa",email = "kauanldsbarbosa@gmail.com"}
]
license = {text = "CC BY-NC 4.0"}
readme = "README.md"
packages = [{include = "api_startkit"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "databases (>=0.9.0,<0.10.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "pytest-tornasync (>=0.6.0.post2,<0.7.0)",
    "pytest-trio (>=0.8.0,<0.9.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "ruff (>=0.9.7,<0.10.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"
pytest = "^8.3.4"
anyio = "^4.8.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
ruff = "^0.9.7"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = "function"
cache_dir = ".pytest_cache"
asyncio_mode = "auto"

[tool.ruff]
line-length = 79
extend-exclude = ['alembic']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
